--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             height: 100vh; /* 确保背景覆盖整个视口 */
-            background-image: url('test.gif'); /* 替换为你的 GIF 文件路径 */
+            background-image: url('background.gif'); /* 替换为你的 GIF 文件路径 */
             background-size: cover; /* 根据需要调整背景大小 */
             background-position: center; /* 背景居中 */
             background-repeat: no-repeat; /* 防止背景重复 */
@@ -15,6 +15,5 @@
     </style>
 </head>
 <body>
-    <h1>这是一个带有 GIF 背景的网页</h1>
 </body>
 </html>
