--- a/puzzle.html
+++ b/puzzle.html
@@ -14,7 +14,7 @@
             height: 100vh;
             margin: 0;
             background-color: #f08080;
-            background-image: url('test.gif'); /* 替换为你的 GIF 文件路径 */
+            background-image: url('background.gif'); /* 替换为你的 GIF 文件路径 */
             background-size: cover; /* 根据需要调整背景大小 */
             background-position: center; /* 背景居中 */
             background-repeat: no-repeat; /* 防止背景重复 */
@@ -99,7 +99,7 @@
         const bgCtx = backgroundCanvas.getContext('2d');
 
         const borderImage = new Image();
-        borderImage.src = 'border2.png'; // 替换为实际边框图片 URL
+        borderImage.src = 'border.png'; // 替换为实际边框图片 URL
 
         borderImage.onload = () => {
             backgroundCanvas.width = 540;
