feat: Test password.

--- a/无名氏11235/index.html
+++ b/无名氏11235/index.html
@@ -14,7 +14,7 @@
             height: 100vh;
             margin: 0;
             background-color: #f08080;
-            background-image: url('background.gif'); /* 替换为你的 GIF 文件路径 */
+            background-image: url('../background.gif'); /* 替换为你的 GIF 文件路径 */
             background-size: cover; /* 根据需要调整背景大小 */
             background-position: center; /* 背景居中 */
             background-repeat: no-repeat; /* 防止背景重复 */
