feat: hidden button of happy_new_year firsh.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>GIF 背景</title>
+    <title>新年快乐</title>
     <style>
         body {
             margin: 0;
