fix: Replace surpriseButton with startButton.

--- a/无名氏11235/happy_new_year.html
+++ b/无名氏11235/happy_new_year.html
@@ -189,8 +189,8 @@
                 }
 
                 const startButton = document.getElementById('startButton');
-                if (surpriseButton.classList.contains('hidden')) {
-                    surpriseButton.classList.remove('hidden');
+                if (startButton.classList.contains('hidden')) {
+                    startButton.classList.remove('hidden');
                     
                     console.log("startButton: ", startButton)
                     // Attach event listener to the button
