fix: Fix html link in subdir's index.html.

--- a/无名氏11235/index.html
+++ b/无名氏11235/index.html
@@ -283,7 +283,7 @@
                     surpriseButton.addEventListener('click', () => {
                         // Hide the button
                         surpriseButton.classList.add('hidden');
-                        window.location.href = 'happy_new_year.html'; // 替换为实际的目标页面路径
+                        window.location.href = '../happy_new_year.html'; // 替换为实际的目标页面路径
                     });
                 }
             }
