feat: Change title.

--- a/无名氏11235/index.html
+++ b/无名氏11235/index.html
@@ -5,6 +5,7 @@
     <!-- 设置文档的字符编码为 UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 设置视口以适应不同设备的屏幕尺寸 -->
+    <title>新年快乐~来玩个拼图吧！</title>
     <style>
         /* 设置整个页面居中显示，并设置背景颜色 */
         body {
