--- a/无名氏11235/happy_new_year.html
+++ b/无名氏11235/happy_new_year.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>新年快乐~蛇年大吉！来看看惊喜吧^-^</title>
     <style>
         body {
             display: flex;
