feat: Change myself to photo.

--- a/puzzle.html
+++ b/puzzle.html
@@ -99,7 +99,7 @@
         const bgCtx = backgroundCanvas.getContext('2d');
 
         const borderImage = new Image();
-        borderImage.src = '../border.png'; // 替换为实际边框图片 URL
+        borderImage.src = 'border.png'; // 替换为实际边框图片 URL
 
         borderImage.onload = () => {
             backgroundCanvas.width = 540;
