--- a/happy_new_year.html
+++ b/happy_new_year.html
@@ -110,7 +110,7 @@
 
         // Load the image
         const img = new Image();
-        img.src = 'myself.png'; // Replace with your image filename
+        img.src = 'photo.png'; // Replace with your image filename
         img.onload = () => {
             console.log('Image loaded successfully');
             canvas.width = img.width;
