--- a/empty.html
+++ b/empty.html
@@ -286,7 +286,7 @@
                     surpriseButton.addEventListener('click', () => {
                         showPage('animationPage', 'animationBackgroundCanvas');
                         console.log("Successfully show animation page");
-                        createAnimation();
+                        // createAnimation();
                         surpriseButton.classList.add('hidden');
                     });
                 }
@@ -420,7 +420,7 @@
                             canvas.height = 400;
                             ctx.drawImage(img, 0, 0, 400, 400);
                             userImage = canvas.toDataURL();
-                            showPage('puzzlePage');
+                            showPage('puzzlePage', 'puzzleBackgroundCanvas');
                             createPuzzlePieces();
                             createAnimation();
                         };
@@ -432,7 +432,7 @@
         });
 
         document.getElementById('startDirectlyButton').addEventListener('click', () => {
-            showPage('puzzlePage');
+            showPage('puzzlePage', 'puzzleBackgroundCanvas');
             createPuzzlePieces();
             createAnimation();
         });
